Queries working excepting: literary devices, manifestations. Need to include enjambment in scansion_structure operation
